adding /api/projects route
